<resources>
    <string name="app_name">IITB Eats</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_cart">Cart</string>

    <string name="done">DONE</string>
    <string name="add">ADD</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="quantity">QUANTITY</string>
    <string name="net">NET TOTAL</string>
    <string name="toppings">TOPPINGS</string>
    <string name="your_plate">YOUR PLATE</string>
    <string name="add_to_plate">ADD TO PLATE</string>

</resources>
