<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/color_view"
                android:layout_width="match_parent"
                android:layout_height="64sp"
                android:background="@color/primary_color"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dialog_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/add_to_cart"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </LinearLayout>

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/fab_logo"
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16sp"
                android:layout_marginTop="32sp"
                app:fab_backgroundColor="@color/accent_color"
                app:fab_elevation="1sp"
                app:fab_iconSrc="@drawable/ic_local_dining_white_48dp"
                app:fab_radius="@dimen/fab_radius" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16sp">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:textColor="@color/secondary_text"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/accent_color"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/secondary_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/vegetarian"
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:layout_gravity="right"
                    android:padding="4sp"
                    android:src="@drawable/vegetarian" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="4sp">

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quantity"
                    android:textColor="@color/hint_text"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/minus"
                    android:layout_width="28sp"
                    android:layout_height="28sp"
                    android:alpha="0.5"
                    android:padding="4sp"
                    android:src="@drawable/ic_remove_circle_outline_black_48dp" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/plus"
                    android:layout_width="28sp"
                    android:layout_height="28sp"
                    android:alpha="0.5"
                    android:padding="4sp"
                    android:src="@drawable/ic_add_circle_outline_black_48dp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/cancel"
                android:textColor="@color/hint_text"
                android:textSize="21sp" />

            <View
                android:layout_width="1sp"
                android:layout_height="match_parent"
                android:layout_marginBottom="16sp"
                android:layout_marginTop="16sp"
                android:background="@color/separator" />

            <TextView
                android:id="@+id/add"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/add"
                android:textColor="@color/accent_color"
                android:textSize="21sp" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>